Minor style fix (vertical align)

--- a/options/options.scss
+++ b/options/options.scss
@@ -204,6 +204,7 @@ table {
 
   .upload {
     display: flex;
+    align-items: baseline;
     height: 3em;
     margin: -5px 0 14px;
 
